test/samples/invalid/resolving/param_local_shadow.maruir
struct M {
    b: bool;

}

fun foo(a: u8)
locals a: i8;
{

}
